# ai_agents_cookbooks

./: .gitignore  README.md  calculator_agent.ipynb  docker-compose.yml  incomplete_llamaindex_milvus_llmware_rag_agent.ipynb  llamaindex_milvus_docker_rag_agent.ipynb  llamaindex_milvus_lite_rag_agent.ipynb  llamaindex_milvus_rag_agent.ipynb  llamaindex_rag_agent.ipynb  ngrok_kill.py  pyproject.toml  python_ngrok.py  requirements.txt  stuff_with_twilio.py  twilio_app.py  voice_agent.py  voice_amy.py
.devcontainer/: Dockerfile  devcontainer.json
blog_summarizer_agent/: blog_reqs.txt  blog_test.ipynb  descriptions.json  sources.json
data/: ListCOVIDEmergencyFood.csv
frontend/: package-lock.json  package.json
june_rag_workshop/: agentic_cody_rag.ipynb  agentic_rag.ipynb
langchain/: octoai_milvus_rag_agent.ipynb  openai_aperturedb_rag_agent.ipynb  phoenix_openai_rag_agent.ipynb  phoenix_portkey_openai_faiss_rag_agent.ipynb  portkey_openai_calculator.ipynb  portkey_openai_faiss_rag_agent.ipynb  portkey_openai_milvus_rag_agent.ipynb
llamaindex/: llama31_70b_rag_agent.ipynb  llama31_70b_rag_agent_w_evals.ipynb  llama31_8b_rag_agent.ipynb  milvus_docker_rag_agent.ipynb  openai_calculator_agent.ipynb  openai_rag_agent_w_evals.ipynb  openai_rag_agent_w_evals_twilio.ipynb
sports_fiascos/: 1994_Vancouver_Stanley_Cup_riot.txt  1999_L27Amicale_riots.txt  2007_NBA_betting_scandal.txt  2022_UEFA_Champions_League_final_chaos.txt  Battle_of_Candlestick.txt  Bottlegate.txt  Bounty_Bowl.txt  Chicago_Bulls_championship_riots.txt  Disco_Demolition_Night.txt  (+3 more)
(+40 files in other folders)
